--- a/ss8/bai tap/landingPage.html
+++ b/ss8/bai tap/landingPage.html
@@ -104,14 +104,14 @@
 <!--    </div>-->
 <!--    <div><img src="../img/OIP.jpg" height="400" width="400"/></div>-->
 <div class="row justify-content-center text-center">
-    <div class="col-12 ">
+    <div class="col-lg-12 ">
         <h3>Microsoft Surface with
             Windows 11
         </h3>
     </div>
 </div>
     <div class="row justify-content-center text-center">
-        <div class="col-12 ">
+        <div class="col-lg-12 ">
                 <p>Surface laptops and 2-in-1s with Windows 11 are designed
                     to fuel your originality,<br>
                     ideas and passions
@@ -119,66 +119,178 @@
         </div>
     </div>
     <div class="row justify-content-center text-center ">
-        <div class="col-6  ">
-                    <a href="#">Explore all products</a>
+        <div class="col-lg-6  ">
+                    <a href="#" style="margin:0 10px ">Explore all products</a>
                     <a href="#">Shop Surface pro 8</a>
         </div>
     </div>
     <div class="row justify-content-center text-center">
-        <div class="col-12">
+        <div class="col-lg-12">
 
-            <img src="../img/OIP.jpg" height="180" width="287"/>
+<!--            <img src="../img/OIP.jpg" style="height: auto ;width: 100%"/>-->
+            <img src="../img/Surface_Hero_Pro8_Accolade_V2_US.jpg" height="787" width="1399" style="height: auto;width: 100%; margin-top: 20px"/>
+
         </div>
     </div>
 </div>
 
 
-<div class="container-fluid ">
-<div class="row">
-    <div col-lg-3 col-md-12>
-       <h3>More choices than ever</h3>
-        <p>Check out the most diverse selection of Surface devices yet,
-            built for all the ways you create, work, play, and connect.
-        </p>
+<div class="container ">
+    <div class="row ">
+        <div class="col-lg-3 col-md-12">
+            <h3>More choices than ever</h3>
+            <p>Check out the most diverse selection of Surface devices yet,
+                built for all the ways you create, work, play, and connect.
+            </p>
 
+        </div>
+        <div class="col-lg-3 col-md-4">
+
+            <div><i class='fas fa-laptop'></i>
+                <a href="#">Compare devices</a></div>
+
+
+            <div><i class='fas fa-laptop'></i>
+                <a href="#">Surface ai home</a></div>
+
+        </div>
+        <div class="col-lg-3 col-md-4">
+
+            <div><i class='fas fa-laptop'></i>
+                <a href="#">Compare devices</a></div>
+
+
+            <div><i class='fas fa-laptop'></i>
+                <a href="#">Surface ai home</a></div>
+
+        </div>
+        <div class="col-lg-3 col-md-4">
+
+            <div><i class='fas fa-laptop'></i>
+                <a href="#">Compare devices</a></div>
+
+
+            <div><i class='fas fa-laptop'></i>
+                <a href="#">Surface ai home</a></div>
+        </div>
     </div>
-    <div class="col-lg-3">
 
-        <div><i class='fas fa-laptop'></i></div>
-        <a href="#">Compare devices</a>
+    <div class="row">
+        <div>2-in-1 PCs</div>
+        <div class="col-md-4 col-lg-3">
 
+            <div class="card text-primary">
+                <img src="../img/Surface_F21_DeviceFamily_DO2_V3.jpg"/>
+                <div class="card-img-overlay">
+                    <h3 class="card-title">NEW</h3>
+                    <p class="card-text"> Surface pro 8</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-lg-3">
+            <div class="card text-primary">
+                <img src="../img/Surface_F21_DeviceFamily_DO2_V3.jpg"/>
+                <div class="card-img-overlay">
+                    <h3 class="card-title">NEW</h3>
+                    <p class="card-text"> Surface pro 8</p>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-lg-3">
+            <div class="card text-primary">
+                <img src="../img/Surface_F21_DeviceFamily_DO2_V3.jpg"/>
+                <div class="card-img-overlay">
+                    <h3 class="card-title">NEW</h3>
+                    <p class="card-text"> Surface pro 8</p>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-lg-3 ">
 
-            <div><i class='fas fa-laptop'></i></div>
-            <a href="#">Surface ai home</a>
-
+            <div class="card text-primary">
+                <img src="../img/Surface_F21_DeviceFamily_DO2_V3.jpg"/>
+                <div class="card-img-overlay">
+                    <h3 class="card-title">NEW</h3>
+                    <p class="card-text"> Surface pro 8</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-lg-3">
-
-        <div><i class='fas fa-laptop'>Compare devices</i></div>
-<!--        <a href="#">Compare devices</a>-->
 
 
-        <div><i class='fas fa-laptop'></i></div>
-        <a href="#">Surface ai home</a>
+    <div>Laptops</div>
+    <div class="row">
 
+        <div class="col-md-4 col-lg-3">
+
+            <div class="card text-primary">
+                <img src="../img/Surface_F21_DeviceFamily_DO2_V3.jpg" />
+                <div class="card-img-overlay">
+                    <h3 class="card-title">NEW</h3>
+                    <p class="card-text"> Surface pro 8</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-lg-3">
+            <div class="card text-primary">
+                <img src="../img/Surface_F21_DeviceFamily_DO2_V3.jpg"/>
+                <div class="card-img-overlay">
+                    <h3 class="card-title">NEW</h3>
+                    <p class="card-text"> Surface pro 8</p>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-lg-3">
+            <div class="card text-primary">
+                <img src="../img/Surface_F21_DeviceFamily_DO2_V3.jpg"/>
+                <div class="card-img-overlay">
+                    <h3 class="card-title">NEW</h3>
+                    <p class="card-text"> Surface pro 8</p>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-lg-3">
+
+            <div class="card text-primary">
+                <img src="../img/Surface_F21_DeviceFamily_DO2_V3.jpg"/>
+                <div class="card-img-overlay">
+                    <h3 class="card-title">NEW</h3>
+                    <p class="card-text"> Surface pro 8</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-lg-3">
+    <div class="row">
+        <div>All-in-One</div>
+        <div class="col-md-4">
+            <div class="card text-primary">
 
-        <div><i class='fas fa-laptop'></i></div>
-        <a href="#">Compare devices</a>
+                <img src="../img/Surface_F21_DeviceFamily_Studio2_V2_Blackfriday4.jpg" />
+                <div class="card-img-overlay">
+                    <h3 class="card-title">NEW</h3>
+                    <p class="card-text"> Surface pro 8</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div class="card text-primary">
 
 
-        <div><i class='fas fa-laptop'></i></div>
-        <a href="#">Surface ai home</a>
-
+                <img src="../img/Surface_Allinone_Homepage_FamilyDevices._V28.jpg" style="height: 214px"/>
+                <div class="card-img-overlay">
+                    <h3 class="card-title">NEW</h3>
+                    <p class="card-text"> Surface pro 8</p>
+                </div>
+            </div>
+        </div>
     </div>
-
-
 
 </div>
 
-
-</div>
 
 
 
